# AIcarusCore

./: .gitignore  README.md  debug_constants.py  debug_save_document.py  full_action_response_test.py  master_chat_ui.py  pyproject.toml  requirements.txt  run.bat  run_core_logic.py  start.bat  test_config.py  test_optimizations.py  websearch_test.py  webui_test.py
.github/workflows/: ruff.yml
debug_doc/: 20250615.md  20250615_bug.md  20250615_重构请求.md  20250616_bug.md  Action_process_flowchart.md
debug_doc/已完成/: 20250615_修复与重构总结.md  20250615_重构请求.md  20250616_bug.md  20250617_get_bot_profile_refactor.md  20250618_private_chat_prompt_support.md  20250619_focus_chat_mood_passing.md  AIcarus认知核心重构：专注模式与指挥中心一体化方案.md  refactor_unread_info_service.md  专注聊天模式主动循环改造计划.md
debug_doc/待办/: 20250617_get_bot_profile_refactor.md  20250618_private_chat_prompt_support.md  20250620_add_summary_persistence.md  20250622_add_episodic_memory_persistence.md  20250623_动态获取机器人信息并更新Prompt.md  专注聊天模式主动循环改造计划.md  记忆系统.md  通信协议图片Seg优化建议.md
debug_doc/待确认/: 20250616_bug2.md  20250616优化.md  20250616优化_分析报告.md
src/: main.py
src/Observation/: __init__.py  summarization_service.py
src/action/: action_handler.py  action_provider.py  prompts.py
src/common/: protected_runner.py  text_splitter.py  time_utils.py  (+2 more)
tasks/: refactor_event_status.md
template/: config_template.toml  config_template.txt  template.env  template.env.txt  移动到根目录中.txt
tests/: contextual_playroom.py  core_test.py  play_with_me.py  real_interruption_observer.py  test_action_handler.py  test_intelligent_interrupter.py
(+111 files in other folders)
